[SC-65] fix : repository 반환에 softDelete 속성 추가